# actix-server-sketch

./: .gitignore  README.md
ControllerServer/: Cargo.toml
ControllerServer/src/: main.rs
TcpSensor/: Cargo.toml
TcpSensor/src/: main.rs
controller_server/: Cargo.toml  display.html
controller_server/src/: main.rs
controller_simple/: Cargo.toml
controller_simple/src/: main.rs
http_sensor/: Cargo.toml
http_sensor/src/: main.rs
tcp_sensor/: Cargo.toml
tcp_sensor/src/: main.rs
