[package]
name = "controller_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0"
actix-server = "2.3"
actix-web = "4.0"
awc = { version = "3.0.0-beta.11", features = [ "openssl" ] }
actix-rt = "2.2"
mdns = "3.0.0"
pin-utils = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
