[package]
name = "tcp_sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = {version = "1.6.1", features = ["v4", "serde"]}
#libmdns = "0.7.5"
mdns = "3.0.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
pin-utils = "0.1"

